--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <header class="header">
   <div class="header__content container">
     <a href="index.html"><img src="img/logo/logo.png" alt="Logo" class="header__logo"></a>
+    <div class="nav__icon">
+      <span></span>
+    </div>
     <div class="header__info">
       <div class="header__top">
         <div class="header__social social">
@@ -21,12 +24,9 @@
           <a href="#" class="social__link"><i class="social__icon fab fa-youtube"></i></a>
           <a href="#" class="social__link"><i class="social__icon fab fa-google"></i></a>
         </div>
-        <a href="tel:+3752900000000" class="header__btn btn">Запись по телефону</a>
+        <a href="tel:+3752900000000" class="header__btn"><i class="header__btn-icon fas fa-phone-alt"></i><span class="header__btn-text">Запись по телефону</span></a>
       </div>
       <div class="header__bottom">
-        <div class="nav__icon">
-          <span></span>
-        </div>
         <nav class="nav__body">
           <ul class="header__nav-list">
             <li><a href="" class="header__nav-link">О нас</a></li>
@@ -440,7 +440,60 @@
       </div>
     </div>
   </section>
-
+  <section class="gallery section">
+    <div class="container">
+      <h2 class="section__text text">Наш instagram - место, где мы общаемся, делимся атмосферой и новостями. Рассказываем о том, что для нас важно.
+      Потому что за Namaste Yoga house стоят живые люди, со своими ценностями и эмоциями.</h2>
+      <div class="gallery__content">
+        <div class="gallery__img-container">
+          <img src="img/8.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/10.jpeg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/7.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/15.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/14.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/12.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/11.jpg" alt="" class="gallery__img">
+        </div>
+        <div class="gallery__img-container">
+          <img src="img/13.jpg" alt="" class="gallery__img">
+        </div>
+      </div>
+    </div>
+  </section>
+<footer class="footer">
+  <div class="footer__content container">
+    <div class="footer__item">
+      <a href="index.html"><img src="img/logo/logo.png" alt="Logo" class="footer__logo"></a>
+      <a href="tel:+375290000000" class="footer__link bold-text">+375 29 0000000</a>
+      <a href="mailto:yoga.namaste@gmail.com" class="footer__link bold-text">yoga.namaste@gmail.com</a>
+      <span class="footer__text text">г.Санкт-Петербург,Варшавский проезд 25</span>
+      <div class="footer__social social">
+        <a href="" class="social__link" target="_blank"><i class="social__icon fab fa-facebook-f"></i></a>
+        <a href="" class="social__link" target="_blank"><i class="social__icon fab fa-instagram"></i></a>
+        <a href="#" class="social__link"><i class="social__icon fab fa-youtube"></i></a>
+        <a href="#" class="social__link"><i class="social__icon fab fa-google"></i></a>
+      </div>
+    </div>
+    <div class="footer__item footer__map">
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac32ad4869bc7fd407809db5d83b502f94ee1aad519a33229a8583680155e3bea&amp;width=420&amp;height=320&amp;lang=en_FR&amp;scroll=true"></script>
+    </div>
+  </div>
+  <div class="copyright">
+    <span class="copyright__text">© 2021 Namaste Yogs house</span>
+  </div>
+</footer>
 
 
 <script src="https://kit.fontawesome.com/1be1ebd693.js" crossorigin="anonymous"></script>
