--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="header__bottom">
         <nav class="nav__body">
           <ul class="header__nav-list">
-            <li><a href="" class="header__nav-link">О нас</a></li>
-            <li><a href="" class="header__nav-link">Направления</a></li>
-            <li><a href="" class="header__nav-link">Расписание</a></li>
-            <li><a href="" class="header__nav-link">Цены</a></li>
-            <li><a href="" class="header__nav-link">Галерея</a></li>
+            <li><a href="#about" class="header__nav-link">О нас</a></li>
+            <li><a href="#types" class="header__nav-link">Направления</a></li>
+            <li><a href="#scheldule" class="header__nav-link">Расписание</a></li>
+            <li><a href="#price" class="header__nav-link">Цены</a></li>
+            <li><a href="#gallery" class="header__nav-link">Галерея</a></li>
             <li><a href="#contact" class="header__nav-link">Контакты</a></li>
           </ul>
         </nav>
@@ -46,7 +46,7 @@
       <h2 class="banner__subtitle">Здоровое тело. Спокойный ум.</h2>
     </div>
   </section>
-  <section class="about section">
+  <section class="about section" id="about">
     <div class="container">
       <p class="about__text section__text text"><span class="bold-text">Yoga house "NAMASTE" </span>— это уютное пространство для практики йоги и саморазвития. Наши двери открыты каждому, кто желает познакомиться с йогой ближе и использовать все возможности для роста и развития.</p>
       <div class="about__info">
@@ -89,7 +89,7 @@
         </div>
       </div>
   </section>
-  <section class="types section">
+  <section class="types section" id="types">
     <div class="container">
       <p class="section__text text">Предлагаем традиционные и современные направления йоги подходящие для начинающих, а также среднего и продвинутого уровня. Занятия включают в себя не только работу над телом (его растяжкой и подвижностью), но и прокачку ментальных навыков (управление своими желаниями, гневом, познание самого себя и пр.).</p>
 
@@ -160,7 +160,7 @@
     </div>
     </div>
   </section>
-  <section class="scheldule section">
+  <section class="scheldule section" id="scheldule">
     <div class="container">
       <p class="section__text text">Можно выбрать практику в удобное для Вас время, различного уровня сложности и созвучную Вашим внутренним устремлениям. Занятия проводят опытные и сертифицированные инструкторы, с которыми можно заниматься индивидуально или в группе.</p>
       <div class="scheldule__content block one">
@@ -387,7 +387,7 @@
 			</div>
     </div>
   </section>
-  <section class="price section">
+  <section class="price section" id="price">
     <div class="container">
       <h2 class="section__text text">Вы можете выбрать разовое посещение или заниматься по абонементу. Предусмотрена оплата наличными и банковской картой.</h2>
       <div class="price__content">
@@ -440,7 +440,7 @@
       </div>
     </div>
   </section>
-  <section class="gallery section">
+  <section class="gallery section" id="gallery">
     <div class="container">
       <h2 class="section__text text">Наш instagram - место, где мы общаемся, делимся атмосферой и новостями. Рассказываем о том, что для нас важно.
       Потому что за Namaste Yoga house стоят живые люди, со своими ценностями и эмоциями.</h2>
@@ -472,7 +472,7 @@
       </div>
     </div>
   </section>
-<footer class="footer">
+<footer class="footer" id="contact">
   <div class="footer__content container">
     <div class="footer__item">
       <a href="index.html"><img src="img/logo/logo2.png" alt="Logo" class="footer__logo"></a>
