--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="about__info">
         <div class="about__info-item">
             <div class="about__info-description">
-              <span class="about__info-title">Удобное месторасположение</span>
+              <span class="about__info-title title">Удобное месторасположение</span>
               <span class="about__info-text text">Хорошее транспортное сообщение с любого конца города.Большая парковка.</span>
             </div>
             <div class="about__info-img">
@@ -61,7 +61,7 @@
         </div>
         <div class="about__info-item">
             <div class="about__info-description">
-              <span class="about__info-title">Уютные залы</span>
+              <span class="about__info-title title">Уютные залы</span>
               <span class="about__info-text text">Четыре зала с отличной вентиляцией, полным оснащением и видом на парк.</span>
             </div>
             <div class="about__info-img">
@@ -70,7 +70,7 @@
         </div>
         <div class="about__info-item">
             <div class="about__info-description">
-              <span class="about__info-title">Лучшие инструкторы</span>
+              <span class="about__info-title title">Лучшие инструкторы</span>
               <span class="about__info-text text">У нас работают только опытные и сертифицированные преподаватели.</span>
             </div>
             <div class="about__info-img">
@@ -79,7 +79,7 @@
         </div>
         <div class="about__info-item">
             <div class="about__info-description">
-              <span class="about__info-title">Аксессуары рядом</span>
+              <span class="about__info-title title">Аксессуары рядом</span>
               <span class="about__info-text text">Аюрведические товары вы можете приобрести в нашем магазине непосредственно на ресепшне.</span>
             </div>
             <div class="about__info-img">
