--- a/index.html
+++ b/index.html
@@ -499,6 +499,5 @@
 <script src="https://kit.fontawesome.com/1be1ebd693.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="main.js"></script></body>  <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
-</body>
+<script src="main.js"></script></body></body>
 </html>
