--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>NAMASTE</title>
 </head>
 <body>
-<header class="header">
+<header class="header" id="home">
   <div class="header__content container">
-    <a href="index.html"><img src="img/logo/logo2.png" alt="Logo" class="header__logo"></a>
+    <a href="#home"><img src="img/logo/logo2.png" alt="Logo" class="header__logo"></a>
     <div class="nav__icon">
       <span></span>
     </div>
@@ -475,7 +475,7 @@
 <footer class="footer" id="contact">
   <div class="footer__content container">
     <div class="footer__item">
-      <a href="index.html"><img src="img/logo/logo2.png" alt="Logo" class="footer__logo"></a>
+      <a href="#home"><img src="img/logo/logo2.png" alt="Logo" class="footer__logo"></a>
       <a href="tel:+375290000000" class="footer__link bold-text">+375 29 0000000</a>
       <a href="mailto:yoga.namaste@gmail.com" class="footer__link bold-text">yoga.namaste@gmail.com</a>
       <span class="footer__text text">г.Санкт-Петербург,Варшавский проезд 25</span>
