--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <span class="about__info-text text">Аюрведические товары вы можете приобрести в нашем магазине непосредственно на ресепшне.</span>
             </div>
             <div class="about__info-img">
-              <img src="img/3.jpg" alt="Ресепшн" class="about__img">
+              <img src="img/3.jpg" alt="Аюрведические товары" class="about__img">
             </div>
         </div>
         </div>
@@ -105,7 +105,7 @@
             <p class="types__item-text text">Хатха-йога сочетает в себе физические нагрузки и дыхательные упражнения, направленные на улучшение работы органов, концентрации внимания и энергетическое очищение тела. Ее целью является развитие физического тела человека и его подготовка к дальнейшему духовному совершенствованию.</p>
             <p class="types__item-text text">Основой хатха йоги служит комплекс упражнений асан, которые выполняются в статике. Во время практики большое внимание уделяется правильному дыханию и осознанности движений. Если вы не знаете с чего начать свой путь в йоге, то начните практиковать хатха йогу. Со временем вы сможете освоить более сложные асаны и перейти на новый уровень физического и духовного развития.</p>
           </div>
-          <img src="img/6.png" alt="" class="types__item-img">
+          <img src="img/6.png" alt="Хатха-йога" class="types__item-img">
         </div>
 
         <!-- Tab Two -->
@@ -118,7 +118,7 @@
             <p class="types__item-text text">В процессе практики используется шипящее дыхание уджайи, которое позволяет сконцентрироваться на занятии и снять накопившийся стресс. Кроме того, уджайи тренирует дыхательную систему и улучшает проходимость бронхов.</p>
             <p class="types__item-text text">Каждая асана сопровождается определенной дришти – сосредоточением взгляда в нужной точке тела и пространства. Она развивает концентрацию внимания, способствует успокоению ума и позволяет выйти на новый уровень осознанности.</p>
           </div>
-          <img src="img/4.jpg" alt="" class="types__item-img">
+          <img src="img/4.jpg" alt="Аштанга-йога" class="types__item-img">
         </div>
 
         <!-- Tab Three -->
@@ -131,7 +131,7 @@
             <p class="types__item-text text">В йоге Айенгара используется много упражнений на укрепление спины, оздоровлении позвоночника и улучшении общего состояния организма. С помощью практики можно не только внешне изменить себя, но и добиться контроля над разумом и эмоциями.</p>
             <p class="types__item-text text">Йога Айенгара хорошо развивает жесткое и физически слабое тело. Она естественно стимулирует жизненные процессы и регенеративные возможности организма.</p>
           </div>
-          <img src="img/5.jpg" alt="" class="types__item-img">
+          <img src="img/5.jpg" alt="Йога Айенгара" class="types__item-img">
         </div>
         <!-- Tab Four -->
         <input type="radio" id="four" name="tabs">
@@ -143,7 +143,7 @@
             <p class="types__item-text text">Основу занятий кундалини-йогой составляет комплекс упражнений – крий, которые направлены на проработку определенных систем и органов. После них обязательно проводится упражнение на релаксацию – Шавасана. Занятие также дополняют медитации и чтение мантр. Групповые занятия способствуют усилению энергетики.</p>
             <p class="types__item-text text">Кундалини-йога оказывает благотворное влияние на нервную и эндокринную системы организма. Она развивает осознанность, интуицию и понимание мира.</p>
           </div>
-          <img src="img/6.jpg" alt="" class="types__item-img">
+          <img src="img/6.jpg" alt="Кундалини-йога" class="types__item-img">
         </div>
 
         <!-- Tab Five -->
@@ -155,7 +155,7 @@
             <p class="types__item-text text">Аэройога -йога в гамаках — комплекс асан, которые выполняются в подвешенном или полуподвешенном состоянии в гамаке или с упором на гамак.</p>
             <p class="types__item-text text">Йога в воздухе – это сочетание асан классической Хатха Йоги, лечебной гимнастики, движения с имитацией полета, релаксационных и медитативных поз в подвесном гамаке. Занятия в гамаке направлены на вытяжение позвоночника и позволяют снизить нагрузку на него.</p>
           </div>
-          <img src="img/7.jpg" alt="" class="types__item-img">
+          <img src="img/7.jpg" alt="Аэройога" class="types__item-img">
       </div>
     </div>
     </div>
@@ -449,25 +449,25 @@
           <img src="img/8.jpg" alt="" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/10.jpeg" alt="" class="gallery__img">
+          <img src="img/10.jpeg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/7.jpg" alt="" class="gallery__img">
+          <img src="img/7.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/15.jpg" alt="" class="gallery__img">
+          <img src="img/15.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/14.jpg" alt="" class="gallery__img">
+          <img src="img/14.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/12.jpg" alt="" class="gallery__img">
+          <img src="img/12.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/11.jpg" alt="" class="gallery__img">
+          <img src="img/11.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
         <div class="gallery__img-container">
-          <img src="img/13.jpg" alt="" class="gallery__img">
+          <img src="img/13.jpg" alt="Занятия йоги" class="gallery__img">
         </div>
       </div>
     </div>
