--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </header>  <section class="banner">
-    <div class="banner__content">
+    <div class="banner__content element-animation">
       <h1 class="banner__title title">Yoga house "NAMASTE"</h1>
       <h2 class="banner__subtitle">Здоровое тело. Спокойный ум.</h2>
     </div>
@@ -49,7 +49,7 @@
   <section class="about section" id="about">
     <div class="container">
       <p class="about__text section__text text"><span class="bold-text">Yoga house "NAMASTE" </span>— это уютное пространство для практики йоги и саморазвития. Наши двери открыты каждому, кто желает познакомиться с йогой ближе и использовать все возможности для роста и развития.</p>
-      <div class="about__info">
+      <div class="about__info element-animation">
         <div class="about__info-item">
             <div class="about__info-description">
               <span class="about__info-title title">Удобное месторасположение</span>
@@ -92,8 +92,7 @@
   <section class="types section" id="types">
     <div class="container">
       <p class="section__text text">Предлагаем традиционные и современные направления йоги подходящие для начинающих, а также среднего и продвинутого уровня. Занятия включают в себя не только работу над телом (его растяжкой и подвижностью), но и прокачку ментальных навыков (управление своими желаниями, гневом, познание самого себя и пр.).</p>
-
-      <div class="tabs">
+      <div class="tabs element-animation">
 
         <!-- Tab One -->
         <input type="radio" id="first" name="tabs" checked>
@@ -163,7 +162,7 @@
   <section class="scheldule section" id="scheldule">
     <div class="container">
       <p class="section__text text">Можно выбрать практику в удобное для Вас время, различного уровня сложности и созвучную Вашим внутренним устремлениям. Занятия проводят опытные и сертифицированные инструкторы, с которыми можно заниматься индивидуально или в группе.</p>
-      <div class="scheldule__content block one">
+      <div class="scheldule__content block one element-animation">
 				<div class="block__item">
 					<div class="block__title title">Понедельник</div>
 					<div class="block__content">
@@ -390,7 +389,7 @@
   <section class="price section" id="price">
     <div class="container">
       <h2 class="section__text text">Вы можете выбрать разовое посещение или заниматься по абонементу. Предусмотрена оплата наличными и банковской картой.</h2>
-      <div class="price__content">
+      <div class="price__content element-animation">
         <div class="price__info">
           <h3 class="price__info-title title">Стоимость групповых занятий</h3>
           <div class="price__info-item">
@@ -444,7 +443,7 @@
     <div class="container">
       <h2 class="section__text text">Наш instagram - место, где мы общаемся, делимся атмосферой и новостями. Рассказываем о том, что для нас важно.
       Потому что за Namaste Yoga house стоят живые люди, со своими ценностями и эмоциями.</h2>
-      <div class="gallery__content">
+      <div class="gallery__content element-animation">
         <div class="gallery__img-container">
           <img src="img/8.jpg" alt="" class="gallery__img">
         </div>
