--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <section class="about section" id="about">
     <div class="container">
       <p class="about__text section__text text"><span class="bold-text">Yoga house "NAMASTE" </span>— это уютное пространство для практики йоги и саморазвития. Наши двери открыты каждому, кто желает познакомиться с йогой ближе и использовать все возможности для роста и развития.</p>
-      <div class="about__info element-animation">
-        <div class="about__info-item">
+      <div class="about__info">
+        <div class="about__info-item element-animation">
             <div class="about__info-description">
               <span class="about__info-title title">Удобное месторасположение</span>
               <span class="about__info-text text">Хорошее транспортное сообщение с любого конца города.Большая парковка.</span>
@@ -59,7 +59,7 @@
               <img src="img/1.jpg" alt="Ресепшн" class="about__img">
             </div>
         </div>
-        <div class="about__info-item">
+        <div class="about__info-item element-animation">
             <div class="about__info-description">
               <span class="about__info-title title">Уютные залы</span>
               <span class="about__info-text text">Четыре зала с отличной вентиляцией, полным оснащением и видом на парк.</span>
@@ -68,7 +68,7 @@
               <img src="img/2.jpg" alt="Зал для занятий" class="about__img">
             </div>
         </div>
-        <div class="about__info-item">
+        <div class="about__info-item element-animation">
             <div class="about__info-description">
               <span class="about__info-title title">Лучшие инструкторы</span>
               <span class="about__info-text text">У нас работают только опытные и сертифицированные преподаватели.</span>
@@ -77,7 +77,7 @@
               <img src="img/4.png" alt="Инструктор" class="about__img">
             </div>
         </div>
-        <div class="about__info-item">
+        <div class="about__info-item element-animation">
             <div class="about__info-description">
               <span class="about__info-title title">Аксессуары рядом</span>
               <span class="about__info-text text">Аюрведические товары вы можете приобрести в нашем магазине непосредственно на ресепшне.</span>
