--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
         <!-- Tab One -->
         <input type="radio" id="first" name="tabs" checked>
-        <label class="tabs__title" for="first">Хатха-йога</label>
-        <div class="tabs__content">
+        <label class="tabs__title element-animation" for="first">Хатха-йога</label>
+        <div class="tabs__content element-animation">
           <div class="types__item-info">
             <h3 class="types__item-title title">Хатха-йога</h3>
             <p class="types__item-text text">Хатха-йога — это корень, из которого вышли Йога Аейнгара и Аштанга-виньяса и все остальные методики.</p>
@@ -109,8 +109,8 @@
 
         <!-- Tab Two -->
         <input type="radio" id="second" name="tabs">
-        <label class="tabs__title" for="second">Аштанга-йога</label>
-        <div class="tabs__content">
+        <label class="tabs__title element-animation" for="second">Аштанга-йога</label>
+        <div class="tabs__content element-animation">
           <div class="types__item-info">
             <h3 class="types__item-title title">Аштанга-йога</h3>
             <p class="types__item-text text">Аштанга-йога считается динамической практикой, которая развивает физическую силу, гибкость и концентрацию внимания. Во время практики происходит глубокое погружение в себя и свои ощущения. Целью Аштанга йоги является внутреннее очищение организма на энергетическом и физическом уровне.</p>
@@ -122,8 +122,8 @@
 
         <!-- Tab Three -->
         <input type="radio" id="three" name="tabs">
-        <label class="tabs__title" for="three">Йога Айенгара</label>
-        <div class="tabs__content">
+        <label class="tabs__title element-animation" for="three">Йога Айенгара</label>
+        <div class="tabs__content element-animation">
           <div class="types__item-info">
             <h3 class="types__item-title title">Йога Айенгара</h3>
             <p class="types__item-text text">Йога Айенгара считается оздоровительной практикой, в которой особое внимание уделяется правильному выполнению асан под руководством тренера. Ее целью является выравнивание энергетического уровня тела с помощью равномерного его вытяжения на физическом уровне.</p>
@@ -134,8 +134,8 @@
         </div>
         <!-- Tab Four -->
         <input type="radio" id="four" name="tabs">
-        <label class="tabs__title" for="four">Кундалини-йога</label>
-        <div class="tabs__content">
+        <label class="tabs__title element-animation" for="four">Кундалини-йога</label>
+        <div class="tabs__content element-animation">
           <div class="types__item-info">
             <h3 class="types__item-title title">Кундалини-йога</h3>
             <p class="types__item-text text">Кундалини – это направление в йоге, основанное на пробуждении и поднятии энергии вверх по позвоночнику. Ее целью является очищение энергетических каналов и сбалансирование чакр. В результате жизненная сила движется внутри всего тела, обеспечивая весь организм живительной энергией.</p>
@@ -147,8 +147,8 @@
 
         <!-- Tab Five -->
         <input type="radio" id="five" name="tabs">
-        <label class="tabs__title" for="five">Аэройога</label>
-        <div class="tabs__content">
+        <label class="tabs__title element-animation" for="five">Аэройога</label>
+        <div class="tabs__content element-animation">
           <div class="types__item-info">
             <h3 class="types__item-title title">Аэройога</h3>
             <p class="types__item-text text">Аэройога -йога в гамаках — комплекс асан, которые выполняются в подвешенном или полуподвешенном состоянии в гамаке или с упором на гамак.</p>
